--- a/public/css/private.css
+++ b/public/css/private.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     align-items: center;
     gap: 20px;
+    margin-right: 50px;
 }
 
 .contenido-principal{
@@ -49,6 +50,23 @@
     border-radius: 10px;
     font-size: 24px; 
     text-align: center; 
+}
+
+
+/* Botón para cerrar la sesión del administrador */
+.cerrar-sesion{
+    position: relative;
+    cursor: pointer;
+    margin: 10px;
+    border-radius: 10px;
+    width: 120px;
+    height: 30px;
+    text-align: center;
+    background-color: #232D4B;
+    border-radius: 10px;
+    color: whitesmoke;
+    align-content: center;    
+    border: 2px solid black;
 }
 
 /* .reloj {
