--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -5,6 +5,7 @@
     margin-right: 80px;
     margin-bottom: 50px;
     border-radius: 50%;
+    cursor: pointer;
 }
 .cabecera{
     display: flex !important;
@@ -43,22 +44,25 @@
 .detalles-actividad {
     display: none;
     /* background: #f8f9fa; */
-    background-color: rgba(var(--bs-success-rgb)) !important;
+    /* background-color: rgba(var(--bs-success-rgb)) !important; */
     padding: 15px;
-    border-top: 1px solid #ddd;
-    border: 2px solid black;
+    border-collapse: collapse;
+    /* border-top: 1px solid #ddd; */
+    border: 1px solid whitesmoke;
+    border-radius: 5px;
     max-height: 40vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     /* color: black !important; */
     font-weight: 500 !important;
     z-index: 3000;
     position: absolute; /* Hace que flote sobre los demás */
     left: 0;
-    top: 100%;
+    top: 103%;
     width: 100%; 
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     
 }
+
 .card-body{
     font-weight: bolder;
 }
@@ -74,6 +78,7 @@
 .ver-perfil{
     text-align: center !important;
     border: none;
+    padding-left: 0 !important;
 }
 .ver-perfil button{    
     border: none;
@@ -85,13 +90,13 @@
 th{      
     text-align: left !important;
     padding-right: 0 !important;
-    padding-left: 20px !important;
+    padding-left: 30px !important;
 }
 .dt-type-date{
     text-align: left !important;
 }
 .dt-column-order{
-    left: 0px;
+    left: 5px;
     right: 0 !important;    
 }
 .table-body{
@@ -99,5 +104,91 @@ th{
     color: var(--bs-card-color);
     
 }
+td,th{
+    border: 1px solid black !important;
+    border-radius: 10px !important;
+}
+.fa-user-plus{
+    
+    
+    color:greenyellow;
+}
+#access-request-number{
+    margin-left: 30px;
+    color:greenyellow;
+    font-weight: bold;
+}
+#div-solicitudes-acceso {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 30vw;
+    height: auto;
+    max-height: 80vh;
+    overflow-y: auto;
+    background-color: #33517D;
+    padding: 15px 30px;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    display: none;
+    text-align: center;
+}
+#div-solicitudes-acceso h3{
+    font-weight: bold;
+    color: whitesmoke;
+}
 
+.header-solicitudes {
+    display: flex;   
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid white;
+   
+}
+
+#cerrar-solicitudes {
+    font-size: 30px;
+    font-weight: bold;
+    cursor: pointer;
+    color: white;
+    margin-bottom: 20px;
+}
+
+#cerrar-solicitudes:hover {
+    color: red;
+}
+
+.solicitud {
+    background: white;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+#form-invitacion{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.btn-aceptar, .btn-rechazar, .btn-ver-perfil {
+    padding: 5px 10px;
+    margin: 5px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.btn-aceptar {
+    background-color: #198754;
+    color: white;
+}
+
+.btn-rechazar {
+    background-color: #DC3545;
+    color: white;
+}
 
