--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -48,13 +48,13 @@
     padding: 15px;
     border-collapse: collapse;
     /* border-top: 1px solid #ddd; */
-    border: 1px solid whitesmoke;
+    border-color:#8f8f8f;
     border-radius: 5px;
     max-height: 40vh;
     overflow-y: auto;
     /* color: black !important; */
     font-weight: 500 !important;
-    z-index: 3000;
+    z-index: 6;
     position: absolute; /* Hace que flote sobre los demás */
     left: 0;
     top: 103%;
@@ -107,15 +107,20 @@ th{
 td,th{
     border: 1px solid black !important;
     border-radius: 10px !important;
+    align-items: center !important;
 }
 .fa-user-plus{
     
     
     color:greenyellow;
 }
-#access-request-number{
-    margin-left: 30px;
+#access-request-number {
+    margin-left: 40px;
     color:greenyellow;
+    font-weight: bold;
+}
+#excluded-number{
+    margin-left: 50px;
     font-weight: bold;
 }
 #div-solicitudes-acceso {
@@ -123,12 +128,12 @@ td,th{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 30vw;
+    width: 20%;
     height: auto;
     max-height: 80vh;
     overflow-y: auto;
     background-color: #33517D;
-    padding: 15px 30px;
+    padding: 15px 15px;
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
@@ -145,6 +150,7 @@ td,th{
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid white;
+    height: 50px;
    
 }
 
@@ -172,9 +178,16 @@ td,th{
     display: flex;
     flex-direction: column;
     gap: 20px;
+
 }
 
-.btn-aceptar, .btn-rechazar, .btn-ver-perfil {
+.input-email-invitado{
+    height: 30px;
+    text-align: center;
+    margin-top: 20px !important;
+}
+
+.btn-aceptar, .btn-rechazar, .btn-perfil-exc ,#btn-enviar-invitacion{
     padding: 5px 10px;
     margin: 5px;
     border: none;
@@ -190,5 +203,22 @@ td,th{
 .btn-rechazar {
     background-color: #DC3545;
     color: white;
+}
+.btn-accion{
+    background-color: #33517D;
+
+}
+.form-check span{
+    display: none;
+    position: absolute;
+    background-color: rgba(255, 99, 71, 0.8);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    top: 70%; 
+    left: 2%;
+    margin-top: 5px;
+    white-space: nowrap;
 }
 
