--- a/public/css/private.css
+++ b/public/css/private.css
@@ -192,8 +192,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
-    border-radius: 10px;
+    /* gap: 10px; */
+    border-radius: 5px;
     text-align: center;
     font-size: 16px;
     font-weight: bold;
