--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -71,8 +71,10 @@
 }
 #selector-fecha{
     padding: 0 !important;
+    margin: 0 !important;
     height: 30px !important;
     padding: 10px !important;
+    width: 150px;
     border-radius: 5px;
 }
 .ver-perfil{
@@ -128,7 +130,7 @@ td,th{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 20%;
+    width: 30vw;
     height: auto;
     max-height: 80vh;
     overflow-y: auto;
@@ -139,6 +141,7 @@ td,th{
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     display: none;
     text-align: center;
+    z-index: 6;
 }
 #div-solicitudes-acceso h3{
     font-weight: bold;
@@ -150,6 +153,7 @@ td,th{
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid white;
+    margin-bottom: 10px;
     height: 50px;
    
 }
@@ -220,5 +224,47 @@ td,th{
     left: 2%;
     margin-top: 5px;
     white-space: nowrap;
+}
+.confirmar-accion {
+    position: fixed;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);    
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* gap: 10px; */
+    border-radius: 5px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: whitesmoke;
+    border: 2px solid black;
+    /* color: whitesmoke;     */
+    padding: 20px;
+    z-index: 7;
+}
+.botones-accion{
+    display: flex;
+    flex-direction: row;
+}
+.aceptar-accion,
+.cancelar-accion {
+    padding: 5px 10px;
+    /* width: 50%;
+    height: 30px; */
+    margin: 20px;
+    /* font-size: 16px; */
+    font-weight: bold;
+    border-radius: 5px;
+    
+    color: whitesmoke;
+}
+.aceptar-accion {
+    background-color:#198754;
+}
+.cancelar-accion {
+    background-color: #DC3545;
 }
 
