--- a/public/css/index.css
+++ b/public/css/index.css
@@ -106,10 +106,11 @@ h3{
 }
 
 .container{
-    border-radius: 10px;
+    border-radius: 50px;
     padding-right: 5% !important; 
     max-width: 1000px !important;   
     opacity: 0.95 !important;
+    /* width: 50% !important; */
 
 }
 /* #register{
@@ -118,12 +119,16 @@ h3{
 
 #login{
     display: none;
+   width: 45% !important;
 }
+
+
 
 .register {
     background: -webkit-linear-gradient(left, #232D4B, #467cbb);
     /* margin-top: 3%; */
     padding: 3%;
+    /* border-radius: 50px !important; */
     /* display: none; */
 }
 
