--- a/public/css/private.css
+++ b/public/css/private.css
@@ -98,6 +98,11 @@ td,th{
     padding: 20px;
     z-index: 7;
 }
+.confirmar-accion p{
+    width: 100%;
+    border-bottom: 1px solid black;
+    font-size: 18px;
+}
 .botones-accion{
     display: flex;
     flex-direction: row;
@@ -119,4 +124,59 @@ td,th{
 }
 .cancelar-accion {
     background-color: #DC3545;
+}
+
+#div-registro-ubicacion{
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 30vw;
+    height: auto;
+    max-height: 80vh;
+    overflow-y: auto;
+    background-color: #33517D;
+    padding: 15px 15px;
+    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    display: none;
+    text-align: center;
+    z-index: 6;
+}
+#div-registro-ubicacion h3{
+    /* font-weight: bold; */
+    color: whitesmoke;
+}
+
+#cerrar-modal{
+    font-size: 30px;
+    font-weight: bold;
+    cursor: pointer;
+    color: white;
+    margin-bottom: 20px;
+}
+#cerrar-modal:hover {
+    color: red;
+}
+#form-registro-ubicacion{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+#btn-registrar-ubicacion{
+    width: 20%;
+    padding: 5px 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    
+}
+.input-comentarios{
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    padding: 10px;
 }
