--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -42,7 +42,7 @@
     display: none;
     /* background: #f8f9fa; */
     /* background-color: rgba(var(--bs-success-rgb)) !important; */
-    padding: 15px;
+    padding: 15px !important;
     border-collapse: collapse;    
     border-color:#8f8f8f;
     border-radius: 5px;
@@ -312,6 +312,19 @@ td,th{
 }
 .m-right10{
     margin-right: 10px;
+}
+.m-left10{
+    margin-left: 10px;
+}
+.border-b{
+    border-bottom: 1px solid gray;
+    float: none !important;    
+}
+.l-height{
+    line-height: 2rem !important;
+}
+.w100{
+    width: 100%;
 }
 /* .marker-cluster-small div {
 text-align: center !important;
