--- a/public/css/private.css
+++ b/public/css/private.css
@@ -26,13 +26,7 @@
     font-size: 16px !important;
     font-weight: bold;
 }
-.div-calendar{
-    display: flex;
-    flex-direction: column;    
-    align-items: center !important;
-    margin: 0 !important;
-    justify-content: center !important;
-}
+
 .card-header{
     display: flex !important;
     align-items: center !important;
@@ -143,7 +137,7 @@ td,th{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 30vw;
+    width: 25vw;
     height: auto;
     max-height: 80vh;
     overflow-y: auto;
@@ -183,6 +177,7 @@ td,th{
     padding: 5px 10px;
     font-size: 16px;
     border-radius: 5px;
+    min-width: fit-content;
     
 }
 .input-comentarios{
