--- a/public/css/common.css
+++ b/public/css/common.css
@@ -225,3 +225,11 @@
     border-radius: 50%;
     cursor: pointer;
 }
+
+#footer{
+    background: none;
+    
+}
+#footer *{
+    color: initial !important;
+}
