--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,7 +25,7 @@ h3{
 }
 
 .contenedor-principal{
-    background: url('../img/img_inicio.png') no-repeat center center/cover;
+    background: url('../img/timelink_portada3.webp') no-repeat center center/cover;
     height: 83vh ;    
     display: flex;
     flex-direction: column;
@@ -245,4 +245,12 @@ h3{
     margin-bottom: -15%;
     color: #495057;
     font-size: 1.75rem !important;
+}
+
+#footer{
+    background: -webkit-linear-gradient(left, #232D4B, #467cbb);
+    color: whitesmoke !important;
+}
+#footer *{
+    color: whitesmoke !important;
 }
